--- a/css/joepstyle.css
+++ b/css/joepstyle.css
@@ -1,1 +1,74 @@
+/* Stylesheet for the Guide for Authors of the Journal of Economic Psychology */
+/* 2025 Carlos Alós-Ferrer */
 
+/* Background color and font */
+body {
+	background-color: #f5f5f5;
+	color: black;
+	font: 100% Verdana, Lucida Sans, sans-serif;
+	padding: 0 2rem 0 2rem;
+}
+
+/* Smooth scrolling */
+html {
+	scroll-behavior: smooth;
+}
+
+/* Formats the header */
+header {
+	background-color: #efe20b;
+	color: black;
+	padding: 0 1rem 0 1rem;
+}
+
+header img {
+	margin-botton: 0;
+}
+
+/* Formats the navigation bar */
+nav {
+	background-color: orangered;
+	color: white;
+	margin-top: 0rem;
+	margin-bottom: 1rem;
+	padding: 0 1rem;
+	padding-top: 1px;
+}
+
+nav a {
+	color: white;
+	text-decoration: none;
+	display: block;
+	padding: 0.5rem;
+}
+
+nav ul {
+	list-style-type: none;
+	display: flex;
+	padding: 0;
+	margin:0;
+}
+
+/* Formats the footer */
+footer {
+	background-color: orangered;
+	color: white;
+	text-align: center;
+	padding: 0.5rem;
+}
+
+footer a {
+	color: white;
+	text-decoration: none;
+	}
+
+/* Adds an arrow before links leading to a new window */
+.mainpage a[target="_blank"]::before {
+    content: "↗";
+    font-size: 0.75em;
+    margin-left: 0.25em;
+    vertical-align: top;
+    color: #666;
+    text-decoration: none;
+    opacity: 0.8;
+}
